# mcp-w-reference

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  multi_service_server.py  pyproject.toml  server.config.json
docs/: index.md
docs/api/: agent.md  config.md  constants.md  gateway.md  types.md
docs/concepts/: architecture.md  cross-service.md  pattern.md
docs/consumers/: usage.md
docs/developers/: building-services.md  gateway.md
docs/examples/: calendar-service.md  email-service.md
docs/migration/: from-tools.md
examples/calendar/: calendar.py
examples/email/: email.py
src/mcp_w/: agent.py  fastagent.config.yaml  router.py  service_schema.json
src/restful_mcp/: __init__.py  agent.py  config.py  constants.py  gateway.py  mcpw.py  types.py
tests/unit/: test_init.py
