[project]
name = "mcp-w_reference"
version = "0.0.0dev"
description = "Reference implementation for ModelContextProtocol: Web Extension"
authors = [
    {name = "Tapan Chugh", email = "tapanc@cs.washington.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core framework dependencies
    "pydantic>=2.11.5",
    "fastmcp>=2.8.1",
    # Service dependencies
    "openai>=1.0.0",
    "python-dotenv>=1.1.0",
    # Development dependencies
    "mypy>=1.5.1",
    "flake8-pyproject==1.2.3",
    "flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pre-commit==3.5.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "fast-agent-mcp>=0.2.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_w"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--asyncio-mode=auto --ignore=tests/integration/"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
exclude = "^examples/google_api|tests|scripts"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_calls = true

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701,W291"

