[project]
name = "mcp-w_reference"
version = "0.0.0dev"
description = "Reference implementation for ModelContextProtocol: Web Extension"
authors = [
    {name = "Tapan Chugh", email = "tapanc@cs.washington.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core framework dependencies
    "pydantic>=2.11.5",
    "fastmcp @ git+https://github.com/chughtapan/fastmcp.git@126dd7b16a47074fcc3c57ddba44e4c3cc97a521",
    "openai>=1.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0",
    "mypy>=1.5.1",
    "flake8-pyproject==1.2.3",
    "flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pre-commit==3.5.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "fast-agent-mcp @ git+https://github.com/chughtapan/fast-agent.git@5496d7cc1466a7422d02fc381daafcd96f9b4636",
    "jsonschema>=4.0.0",
    "types-jsonschema>=4.24.0.20250708",
]

[project.scripts]
mcpw-agent = "mcp_w.agent:main"
mcpw-router = "mcp_w.router:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_w"]

[tool.hatch.build]
include = ["src/mcp_w/*.yaml", "src/mcp_w/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--asyncio-mode=auto --ignore=tests/integration/"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
exclude = "^examples/google_api|tests|scripts"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_calls = true

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701,W291"

