[project]
name = "restful-mcp"
version = "0.0.0dev"
description = "RESTful MCP - A pattern for building scalable Model Context Protocol services"
authors = [
    {name = "Tapan Chugh", email = "tapanc@cs.washington.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["mcp", "llm", "ai", "agents", "microservices"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/chughtapan/restful-mcp"
Documentation = "https://restful-mcp.readthedocs.io"
Repository = "https://github.com/chughtapan/restful-mcp"
Issues = "https://github.com/chughtapan/restful-mcp/issues"
dependencies = [
    # Core framework dependencies
    "pydantic>=2.11.5",
    "fastmcp @ git+https://github.com/chughtapan/fastmcp.git@126dd7b16a47074fcc3c57ddba44e4c3cc97a521",
    "openai>=1.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0",
    "mypy>=1.5.1",
    "flake8-pyproject==1.2.3",
    "flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pre-commit==3.5.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "fast-agent-mcp @ git+https://github.com/chughtapan/fast-agent.git@5496d7cc1466a7422d02fc381daafcd96f9b4636",
    "jsonschema>=4.0.0",
    "types-jsonschema>=4.24.0.20250708",
    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
restful-mcp-agent = "restful_mcp.agent:main"
restful-mcp-gateway = "restful_mcp.gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/restful_mcp"]

[tool.hatch.build]
include = ["src/restful_mcp/*.yaml", "src/restful_mcp/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--asyncio-mode=auto --ignore=tests/integration/"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
exclude = "^examples/google_api|tests|scripts"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_calls = true

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701,W291"

